# supplychain-platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
database/: schema.sql
deploy/argocd/: application.yaml
deploy/k8s/: ais-producer.yaml  api-service.yaml  configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  news-producer.yaml  pdb.yaml  risk-worker.yaml  secret-template.yaml  serviceaccount.yaml  vessel-consumer-worker.yaml  weather-producer.yaml
libs/: __init__.py
libs/config_common/: settings.py
libs/db_common/: __init__.py  database.py  models.py
libs/kafka_common/: __init__.py  client.py  dlq.py
libs/message_common/: __init__.py  schemas.py
libs/telemetry_common/: __init__.py  logging.py
samples/: ais-event.json  news-event.json  weather-event.json
services/ais-producer/: Dockerfile  main.py
services/api-service/: Dockerfile  main.py
services/news-producer/: Dockerfile  main.py
services/risk-worker/: Dockerfile  main.py
services/vessel-consumer-worker/: Dockerfile  main.py
services/weather-producer/: Dockerfile  main.py
tests/: test_config.py  test_messages.py  test_models.py
