[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supplychain-platform"
version = "0.1.0"
description = "Real-time supply chain monitoring platform"
requires-python = ">=3.12"
dependencies = [
  "confluent-kafka==2.14.2",
  "fastapi==0.138.0",
  "psycopg2-binary==2.9.10",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "sqlalchemy==2.0.51",
  "uvicorn==0.49.0",
  "websockets==16.0",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "httpx==0.28.1",
  "mypy==1.15.0",
  "pytest==8.4.2",
  "pytest-cov==5.0.0",
  "ruff==0.15.18",
]

[tool.setuptools.packages.find]
include = ["libs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]
